--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "nodemon": "^1.17.3",
     "truffle": "5.0.2",
     "truffle-contract": "3.0.6"
+  },
+  "dependencies": {
+    "ejs": "^2.6.2",
+    "express": "^4.17.1",
+    "multer": "^1.4.2"
   }
 }
